--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.18",
-    "path": "^0.12.7"
+    "mongoose": "^5.9.18",
+    "path": "^0.12.7",
+    "pdfmake": "^0.1.65"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.19.4"
   }
 }
